# metacode-lecture

./: .env  .gitattributes  .gitignore  2-1, VSCode에서 Github Copilot 사용하기 및 Google Colab에서 Gemini 사용하기 .ipynb  2-3, 1. time_series_eda_bike_sharing_lecture.ipynb  2-3, 1. time_series_eda_bike_sharing_rich_lecture.ipynb  2-3, 2-1. time_series_forecasting_classical_baselines.ipynb  2-3, 2-1. time_series_forecasting_classical_baselines.py  2-3, 2-2. time_series_forecasting_pytorch_lstm.ipynb  2-3, 2. time_series_modeling_bike_sharing_lecture.ipynb  2-4, 1. CV_CNN_CIFAR10_lecture.ipynb  2-4, 1. CV_MLP_CNN_CIFAR10_lecture.ipynb  2-4, 2. CV_transfer_learning_mobilenet_efficientnet_lecture.ipynb  2-5, 1. STT_Whisper_WER_lecture.ipynb  2-5, 2. TTS_Google_Cloud_TTS_lecture.ipynb  2-5, 2. TTS_voice_cloning_Coqui_lecture.ipynb  2-6, 1. NLP_text_classification_TF-IDF_vs_SBERT_lecture.ipynb  2-6, 2. NLP_embeddings_retrieval_hybrid_lecture.ipynb  2-6, 2. NLP_embeddings_similarity_and_miniRAG_lecture.ipynb  Classical_baselines_reviewed.ipynb  LSTM_reviewed.ipynb  README.md  cv_hf_timm_mobile_efficient_light.ipynb  cv_torch_lecture_1_cnn_cifar10_expanded.ipynb  pyproject.toml  review.md  snippets.txt  time_series_eda_bike_sharing_rich.py  time_series_eda_bike_sharing_rich_lecture.ipynb  timeseries_lecture1_eda_1.ipynb  timeseries_lecture2_modeling.ipynb  딥러닝 실습을 위한 환경셋팅_Python 3.13 + Poetry로  VSCode·Jupyter 개발환경 만들기.pptx
artifacts/: sbert_lr.joblib  tfidf_lr.joblib  tfidf_vectorizer.joblib
outputs/: hybrid_top5.csv  sbert_top5_cell14.csv  tfidf_top5.csv
trash/: 2-3, 2-1. time_series_forecasting_classical_baselines.ipynb  2-3, 2-2. time_series_forecasting_pytorch_lstm.py  2-5, 3. STT_to_TTS_pipeline_Gradio_lecture.ipynb  2-6, 2. NLP_embeddings_retrieval_hybrid_lecture.ipynb  2-6, 2. NLP_embeddings_similarity_and_miniRAG_lecture.ipynb  Classical_baselines_reviewed.ipynb  Combined_bike_demand_baselines_LSTM_clean.ipynb  Combined_bike_demand_clean_structured.ipynb  EDA_reviewed.ipynb  mobilenet_v2_graph  (+11 more)
(+10 files in other folders)
