[project]
name = "metacode"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.5,<4.0.0)",
    "pandas (>=2.2.2,<3.0.0)",
    "numpy (>=2.0.0,<3.0.0)",
    "seaborn (>=0.13.2,<1.0.0)",
    "scikit-learn (>=1.5.0,<2.0.0)",
    "statsmodels (>=0.14.2,<1.0.0)",
    # "pyarrow (>=17.0.0,<18.0.0)",  # Python 3.13 호환성 문제로 주석 처리
    "scipy (>=1.11.0,<2.0.0)",
    "ipykernel (>=6.29.0,<7.0.0)",
    "notebook (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
